--- a/citations.bib
+++ b/citations.bib
@@ -8,3 +8,20 @@
   year={2014},
   publisher={Now Publishers, Inc.}
 }
+
+@inproceedings{musco2017recursive,
+  title={Recursive Sampling for the Nystrom Method},
+  author={Musco, Cameron and Musco, Christopher},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3836--3848},
+  year={2017}
+}
+
+@inproceedings{clarkson2013low,
+  title={Low rank approximation and regression in input sparsity time},
+  author={Clarkson, Kenneth L and Woodruff, David P},
+  booktitle={Proceedings of the forty-fifth annual ACM symposium on Theory of computing},
+  pages={81--90},
+  year={2013},
+  organization={ACM}
+}
