--- a/proposal.tex
+++ b/proposal.tex
@@ -44,13 +44,29 @@ Note that the above is just a short list of some representative sketching algori
 We expect the main challenge of the project to be the initial implementation of correct sequential versions of our algorithms, and the subsequent optimization on GPUs. Although the algorithms themselves are not incredibly complex, deciding on a framework to work in and setting everything up may be difficult in the first phase of the project. We expect to make use of existing code, as described in section 3, as well as libraries for linear algebraic operations. However, we still expect this to be one of the more challenging parts of the project. After the set up, the main objective and challenge of the project will be speeding up the code on GPUs. As described before, some parallelization strategies are known already. However, parallel programming on GPUs is an art that can be wildly different from parallelization strategies for distributed computation, and we expect this to take the majority of our time on this project.
 
 \section{Resources}
+\subsection{Implementation Resources}
 Sketching algorithms for streaming problems have been implemented successfully, most notably (and the only one to our knowledge) by Yahoo in their Java sketching library, Data Sketches (\url{https://datasketches.github.io/}). Although this library supports parallel computation in the form of distributed computation, it has not yet been parallelized at the level of GPUs. Other attempts (\url{https://github.com/jaykar/matrix_sketching}) have been made by smaller organizations to implement these sketching algorithms on the GPU, to our knowledge, they have not been successful. 
 
-The two projects mentioned above give us an excellent platform from which we can kick off our project. Although Data Sketches does not allow us to check correctness since it is a randomized algorithm whose seed we cannot set, it gives us an excellent reference implementation for a sequential version of some of the algorithms we are interested in with respect to the speedup we may achieve. In addition, the website for Data Sketches also includes a discussion for the parallelization tricks used to support distributed computation, so we can base our strategies off of their reports. The unsuccessful GPU code included a C++ implementation of some of the sketching algorithms we are interested in, which helps speed up the process of developing sequential versions of our code. 
+The two projects mentioned above give us an excellent platform from which we can kick off our project. Although Data Sketches does not allow us to check correctness since it is a randomized algorithm whose seed we cannot set, it gives us an excellent reference implementation for a sequential version of some of the algorithms we are interested in with respect to the speedup we may achieve. As far as we can tell, Data Sketches implements the heavy hitters algorithm, which we can compare to our implementation. The Data Sketches documentation mentions the frequent directions algorithm, which is equivalent to the low rank approximation problem, but we were unable to find the code for it at the time of this writing. 
+
+In addition to providing reference implementations, the website for Data Sketches also includes a discussion for the parallelization tricks used to support distributed computation, so we can base some of our strategies off of their reports. 
+
+The unsuccessful GPU code included a C++ implementation of some of the sketching algorithms we are interested in, which helps speed up the process of developing sequential versions of our code. The code included fragments of code for count sketch, Gaussian projections, linear regression, and rank $k$ singular value decomposition. Some of these were incomplete and the library was missing some subroutines, as far as we could tell. This is not a professionally maintained project, and we may have to redo all of this; we will confirm as soon as our testing framework is set up. 
+
+\subsection{Theoretical Resources}
+As a reference for our algorithms and applications, we expect to be mostly referring to the monograph \cite{woodruff2014sketching}, as well as course material from Algorithms for Big Data (Carnegie Mellon University Fall 2017 15-859, \url{http://www.cs.cmu.edu/afs/cs/user/dwoodruf/www/teaching/15859-fall17/}) and Machine Learning for Large Datasets (Carnegie Mellon University Spring 2018 10-405, \url{http://www.cs.cmu.edu/afs/cs/user/dwoodruf/www/teaching/15859-fall17/}). 
 
 \section{Goals and Deliverables}
 \subsection{Core Achievements}
 As a baseline goal for the project, we plan to implement at least two sketching algorithms (e.g.\ count sketch and subsampled randomized Hadamard transform) and at least three applications of the sketching algorithms (e.g.\ linear regression, $k$ rank approximation, and principal component analysis). This includes a full testing framework, fast sequential implementations, and optimized blazing fast GPU implementations. These algorithms were designed to speedup computations on extremely large data sets, so we might hope to achieve around $100\times$ speed up for sufficiently sized inputs. 
+\subsubsection{Benchmarking Tests}
+We will be evaluating our performance on sketches by running our code on both synthetic and realistic test cases. We have four different sources of test cases in mind:
+\begin{itemize}
+	\item randomly generated matrices (that we produce)
+	\item small and large images downloaded from the internet
+	\item matrices from the UF sparse matrix collection (\url{https://www.cise.ufl.edu/research/sparse/matrices/list_by_id.html}), used by experiments in the Clarkson and Woodruff count sketch paper \cite{clarkson2013low}
+	\item datasets from the UCI machine learning repository used by experiments in the Musco and Musco Nystr\"om sampling paper \cite{musco2017recursive} (\url{https://archive.ics.uci.edu/ml/datasets/YearPredictionMSD}, \url{https://archive.ics.uci.edu/ml/datasets/Adult}, \url{https://archive.ics.uci.edu/ml/datasets/Covertype}
+\end{itemize}
 
 \subsection{Extra Achievements}
 There are a few different directions in which we could extend our project. One direction is just to implement and optimize more sketching algorithms and applications. Another could be to do some analysis on the various sketching algorithms that we implement, comparing how the algorithms scale and which algorithms are best at which scales. Yet another direction could be to put in more software engineering effort and expose our CPU and GPU code to other frameworks, for example by providing a Python library (like NumPy and TensorFlow). 
@@ -69,13 +85,14 @@ Below is our proposed schedule. The ($*$) indicates a course deadline.
 		Finish researching existing code & April 6 \\
 		Decide on algorithms to implement & April 8 \\
 		($*$)Proposal Due & April 9 \\
-		Sequential code of all algorithms & April 12 \\
 		Testing framework for all algorithms & April 15 \\
-		Correct GPU code of all algorithms & April 18 \\
+		Sequential code of all algorithms & April 18 \\
 		($*$)Project Checkpoint I & April 18 \\
-		Optimized GPU code of all algorithms & April 27 \\
+		Correct GPU code of all algorithms & April 24 \\
+		Optimized I GPU code of all algorithms & April 27 \\
 		($*$)Project Checkpoint II & April 27 \\
-		Decide on extra achievements & April 28 \\
+		Optimized II GPU code of all algorithms & May 1 \\
+		Decide on extra achievements & May 2 \\
 		Extra achievements & May 5 \\
 		Project Report and Poster & May 7 \\
 		($*$)Report Due & May 7 \\
