--- a/docs/citations.bib
+++ b/docs/citations.bib
@@ -25,3 +25,14 @@
   year={2013},
   organization={ACM}
 }
+
+@article{dasgupta2003elementary,
+  title={An elementary proof of a theorem of Johnson and Lindenstrauss},
+  author={Dasgupta, Sanjoy and Gupta, Anupam},
+  journal={Random Structures \& Algorithms},
+  volume={22},
+  number={1},
+  pages={60--65},
+  year={2003},
+  publisher={Wiley Online Library}
+}
