count sketch constants reference

--- a/docs/sketch-constants.tex
+++ b/docs/sketch-constants.tex
@@ -10,6 +10,13 @@
 \section{Introduction}
 We use this file to record our derivation for tracking the constants used for some of the sketching algorithms that we implement. 
 
+\section{Count Sketch}
+We refer to \url{http://www.cs.cmu.edu/afs/cs/user/dwoodruf/www/teaching/15859-fall17/weekTwo.pdf}, which gives that
+\[
+	k\geq \frac{6d^2}{\delta\varepsilon^2}
+\]
+suffices for a $(1+\varepsilon)$ subspace embedding. 
+
 \section{Gaussian sketch}
 We refer to theorem 2.1 in \cite{dasgupta2003elementary}, which gives that
 \[
