fix computation error

--- a/docs/sketch-constants.tex
+++ b/docs/sketch-constants.tex
@@ -91,11 +91,11 @@ Now, we find $k$. Recall that we set $\beta = 1/4$. The result that we use, matr
 \]
 where $\gamma = 1+d/\beta$ and $\sigma^2 = d/\beta - 1$. Then,
 \[
-	\sigma^2 + \frac{\gamma\varepsilon}3\leq \frac43\frac{d}{\beta} + \frac23\leq \frac86\frac{d}{\beta}+\frac16\frac{d}{\beta} = \frac32\frac{d}\beta = 6d
+	\sigma^2 + \frac{\gamma\varepsilon}3\leq \frac43\frac{d}{\beta} - \frac23\leq \frac43\frac{d}{\beta}
 \]
 so to get $\delta < 1/100$, we can choose
 \[
-	k\geq \frac{C\cdot 6d\log d}{\varepsilon^2}
+	k\geq \frac{C\cdot \frac43\frac{d}{\beta}\log d}{\varepsilon^2}
 \]
 where
 \[
