fix computation error

--- a/docs/sketch-constants.tex
+++ b/docs/sketch-constants.tex
@@ -99,7 +99,7 @@ so to get $\delta < 1/100$, we can choose
 \]
 where
 \[
-	2de^{-C6d\log d/6d} = 2de^{-C\log d} = 2d^{1-C}<\frac1{100}\impliedby 2^C>400\iff C>\log_2 400
+	2de^{-C6d\log d/6d} = 2de^{-C\log d} = 2d^{1-C}<\frac1{100}\impliedby d^{C-1}>200\iff C = 1 + \log_d 200
 \]
 assuming $d\geq 2$. 
 
