start on final report

--- a/docs/sketch-constants.tex
+++ b/docs/sketch-constants.tex
@@ -82,10 +82,10 @@ allows for efficient computation while giving an approximation factor of
 \[
 	(1\pm6\varepsilon)(1\pm1/2) = 1\pm(1/2+9\varepsilon).
 \]
-Then, we want to set $\beta = 1-(1/2+9\varepsilon)$ so we could set $\varepsilon = 1/36$ for $\beta = 1/4$ for example. 
+Then, we could set $\varepsilon = 1/36$ for $\beta = 4/7$ for example. 
 
 \subsection{Number of Samples}
-Now, we find $k$. Recall that we set $\beta = 1/4$. The result that we use, matrix Chernoff, is that for $\varepsilon>0$,
+Now, we find $k$. Recall that we set $\beta = 4/7$. The result that we use, matrix Chernoff, is that for $\varepsilon>0$,
 \[
 	\Pr\left(\norm{W}_2>\varepsilon\right)\leq 2de^{-k\varepsilon^2/(\sigma^2+\gamma\varepsilon/3)}
 \]
