finish background and approach for report

--- a/docs/citations.bib
+++ b/docs/citations.bib
@@ -36,3 +36,12 @@
   year={2003},
   publisher={Wiley Online Library}
 }
+
+@inproceedings{nelson2013osnap,
+  title={OSNAP: Faster numerical linear algebra algorithms via sparser subspace embeddings},
+  author={Nelson, Jelani and Nguy{\^e}n, Huy L},
+  booktitle={Foundations of Computer Science (FOCS), 2013 IEEE 54th Annual Symposium on},
+  pages={117--126},
+  year={2013},
+  organization={IEEE}
+}
