--- a/docs/report.tex
+++ b/docs/report.tex
@@ -4,6 +4,9 @@
 \usepackage{hyperref}
 \usepackage[margin=1in]{geometry}
 \usepackage{cite, enumerate, amsmath, amssymb}
+\usepackage{graphicx}
+
+\graphicspath{ {images/} }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%     CODE LATEX     %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{color}
@@ -59,7 +62,7 @@
 \maketitle
 
 \begin{abstract}
-	In this course project, we implemented sketching algorithms and applications on CPU in C++ and in CUDA on the GPU.
+	In this course project, we implemented and optimized matrix sketching algorithms on CPU in C++ and in CUDA on the GPU, as well as stream sketching algorithms in C++ with OMP. We mainly measured for leverage score sampling sketch for the CUDA sketches, for which we achieve as high as $40\times$ speedup, and modified absorption sketch for the OMP sketches, for which we achieve as high as $8\times$ speedup.
 \end{abstract}
 
 \section{Background}
@@ -136,7 +139,7 @@ These numbers were obtained by tracking constants for the proof given in lecture
 This algorithm is the main algorithm that benefits greatly from running on a GPU, since it is quite computationally intensive in exchange for sparsity and interpretability of the resulting sketch. As described in more detail in the section \ref{approach-leverage}, we can reveal independence structure from the algorithm after taking the QR decomposition, which allows us to decouple the columns of $R$ when we compute the inverse of $R^{-1}$, along with subsequent computations. 
 
 \section{Approach}
-Our baseline sequential implementation for our matrix sketching algorithms was developed in C++, using the linear algebra library Eigen (\url{https://eigen.tuxfamily.org/}). Our optimized GPU implementation was developed in CUDA on NVIDIA GPUs, making use of the CUDA helper libraries CUBLAS, CUSOLVER, and CURAND. 
+Our baseline sequential implementation for our matrix sketching algorithms was developed in C++, using the linear algebra library Eigen (\url{https://eigen.tuxfamily.org/}). Our optimized GPU implementation was developed in CUDA on NVIDIA GPUs, making use of the CUDA helper libraries CUBLAS, CUSOLVER, and CURAND. As great as CUBLAS is, CUBLAS routines cannot be called on shared memory, and thus we still have a lot of optimization left on the table that could be collected by rewriting some of the CUBLAS routines manually to operate on shared memory. Instead, when we call CUBLAS routines from device functions, child kernels are spawned from these parent kernels, and we content ourselves with optimization due to just parallelism and locality without the speed of shared memory. 
 
 \subsection{Leverage Score Sampling}\label{approach-leverage}
 At first glance, the algorithm seems to suffer from a lot of dependencies, as the algorithm involves a lot of matrix operations both from the left and right. Another level of complexity is added by the fact that CUBLAS, the CUDA basic linear algebra subroutines library, is written to execute everything in column major order. We carefully describe from an implementation point of view how to milk out all the independent components to this algorithm.
@@ -168,6 +171,32 @@ can be computed independently. In addition, we will need the CDF for sampling la
 The last step is to sample according to the distribution and apply the sketch, but these are easily parallelized.
 
 \section{Results}
+
+\subsection{Leverage Score Sampling}
+We first present our results for implementing leverage score sampling on GPUs. Correctness of our algorithms were ensured by checking that our graphs were indeed a subspace embedding, i.e.\ that for random vectors, the Euclidean norms were preserved. 
+
+Our benchmark data was derived from a range of randomly generated matrices, ranging from around a few kilobytes ($10\times 5$ matrices) up to around 40 megabytes ($30000\times 100$ matrices). To measure the efficiency of our CUDA implementation, we compared the time to a single-threaded C++ implementation based on optimized linear algebra subroutines of the Eigen library. We computed the wall-clock time of both the sequential and parallel implementations and took the ratio of the sequential time and the parallel time to be our speedup. 
+
+\begin{figure}[ht]
+\centering
+\label{speedup-vs-rows}
+\includegraphics[scale=0.7]{speedup-vs-rows}
+\caption{Speedup does not improve as a function of $n$}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\label{speedup-vs-cols}
+\includegraphics[scale=0.7]{speedup-vs-cols}
+\caption{Speedup improves dramatically as a function of $d$}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\label{speedup-vs-threads}
+\includegraphics[scale=0.7]{speedup-vs-threads}
+\caption{Speedup improves dramatically as a function of $d$}
+\end{figure}
 
 \section{Division of Work}
 Equal work was performed by both project members. 
