some report changes

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -62,7 +62,7 @@
 \maketitle
 
 \begin{abstract}
-	In this course project, we implemented and optimized matrix sketching algorithms on CPU in C++ and in CUDA on the GPU, as well as stream sketching algorithms in C++ with OMP. We mainly measured for leverage score sampling sketch for the CUDA sketches, for which we achieve as high as $40\times$ speedup, and modified absorption sketch for the OMP sketches, for which we achieve as high as $8\times$ speedup.
+	In this course project, we implemented and optimized matrix sketching algorithms on CPU in C++ and in CUDA on the GPU, as well as stream sketching algorithms in C++ with OMP. We mainly measured the leverage score sampling sketch for the CUDA sketches, for which we achieve as high as $40\times$ speedup, and modified absorption sketching algorithm for the OMP sketches, for which we achieve as high as $8\times$ speedup.
 \end{abstract}
 
 \section{Background}
@@ -138,8 +138,11 @@ These numbers were obtained by tracking constants for the proof given in lecture
 
 This algorithm is the main algorithm that benefits greatly from running on a GPU, since it is quite computationally intensive in exchange for sparsity and interpretability of the resulting sketch. As described in more detail in the section \ref{approach-leverage}, we can reveal independence structure from the algorithm after taking the QR decomposition, which allows us to decouple the columns of $R$ when we compute the inverse of $R^{-1}$, along with subsequent computations. 
 
+\subsection{Count Min Sketch}
+This type of sketch is different from the others described. Like those mentioned previously, this data structure is used to represent a vector with sub-linear space. However, unlike the others, this data structure allows for accessing specific elements of the vector it represents. More formally, this skech is a $d \times w$ matrix equiped with two operations, \verb|get(j)| and \verb|add(j, x)|, and $d$ hash functions $h_i (x)$. This sketch is initialized to all 0s. When \verb|add(i, x)| is called, $x$ is added to $i, h_i(j)$, so each row of the matrix has some element incremented by $x$. Then, the \verb|get(j)| function looks at all entries $i, h_i(j)$ and returns the minimum. Taking this minimum ensures that the returned value is never smaller than the true value, and that there is some tolerance for hash collisions on each row of the sketch. By this construction, we note that these sketches are linear, so adding two sketches with identical hash functions entry-wise represents a sketch of the sum of the two original vectors, and likewise for scalar multiplication.
+
 \section{Approach}
-Our baseline sequential implementation for our matrix sketching algorithms was developed in C++, using the linear algebra library Eigen (\url{https://eigen.tuxfamily.org/}). Our optimized GPU implementation was developed in CUDA on NVIDIA GPUs, making use of the CUDA helper libraries CUBLAS, CUSOLVER, and CURAND. As great as CUBLAS is, CUBLAS routines cannot be called on shared memory, and thus we still have a lot of optimization left on the table that could be collected by rewriting some of the CUBLAS routines manually to operate on shared memory. Instead, when we call CUBLAS routines from device functions, child kernels are spawned from these parent kernels, and we content ourselves with optimization due to just parallelism and locality without the speed of shared memory. 
+Our baseline sequential implementation for our matrix sketching algorithms was developed in C++, using the linear algebra library Eigen (\url{https://eigen.tuxfamily.org/}). Our optimized GPU implementation was developed in CUDA on NVIDIA GPUs, making use of the CUDA helper libraries CUBLAS, CUSOLVER, and CURAND. As great as CUBLAS is, CUBLAS routines cannot be called on shared memory, and thus we still have a lot of optimization left on the table that could be collected by rewriting some of the CUBLAS routines manually to operate on shared memory. Instead, when we call CUBLAS routines from device functions, child kernels are spawned from these parent kernels, and we content ourselves with optimization due to just parallelism and locality without the speed of shared memory.
 
 \subsection{Leverage Score Sampling}\label{approach-leverage}
 At first glance, the algorithm seems to suffer from a lot of dependencies, as the algorithm involves a lot of matrix operations both from the left and right. Another level of complexity is added by the fact that CUBLAS, the CUDA basic linear algebra subroutines library, is written to execute everything in column major order. We carefully describe from an implementation point of view how to milk out all the independent components to this algorithm.
