citations for mad sketch

--- a/docs/citations.bib
+++ b/docs/citations.bib
@@ -45,3 +45,21 @@
   year={2013},
   organization={IEEE}
 }
+
+@inproceedings{talukdar2014scaling,
+  title={Scaling graph-based semi supervised learning to large number of labels using count-min sketch},
+  author={Talukdar, Partha and Cohen, William},
+  booktitle={Artificial Intelligence and Statistics},
+  pages={940--947},
+  year={2014}
+}
+
+@inproceedings{talukdar2009new,
+  title={New regularized algorithms for transductive learning},
+  author={Talukdar, Partha Pratim and Crammer, Koby},
+  booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  pages={442--457},
+  year={2009},
+  organization={Springer}
+}
+
