--- a/docs/report.tex
+++ b/docs/report.tex
@@ -201,6 +201,9 @@ Our benchmark data was derived from a range of randomly generated matrices, rang
 \section{Division of Work}
 Equal work was performed by both project members. 
 
+\nocite{talukdar2014scaling}
+\nocite{talukdar2009new}
+
 \bibliographystyle{alpha}
 \bibliography{citations}
 
